@@ -1,9 +1,9 @@
 {
   "timestamp" : "2025-01-09T02:12:08Z",
   "count" : 2,
-  "count_minmax" : [ 1, 2 ],
+  "count_minmax" : [ 2, 2 ],
   "count_decinc" : [ -0, +2 ],
   "uniques" : 2,
-  "uniques_minmax" : [ 1, 2 ],
+  "uniques_minmax" : [ 2, 2 ],
   "uniques_decinc" : [ -0, +2 ]
 }
