@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2025-01-08T01:45:19Z",
+  "timestamp" : "2025-01-09T02:12:08Z",
   "count_outdated" : 1740,
   "uniques_outdated" : 985,
-  "count" : 1743,
-  "uniques" : 988,
+  "count" : 1746,
+  "uniques" : 991,
   "clones" : [
     {
       "timestamp": "2024-12-30T00:00:00Z",
@@ -25,12 +25,21 @@
     },
     {
       "timestamp": "2025-01-07T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
+      "count_decinc": [ 0, 2 ],
+      "uniques": 2,
+      "uniques_minmax": [ 1, 2 ],
+      "uniques_decinc": [ 0, 2 ]
+    },
+    {
+      "timestamp": "2025-01-08T00:00:00Z",
+      "count": 2,
+      "count_minmax": [ 2, 2 ],
+      "count_decinc": [ 0, 2 ],
+      "uniques": 2,
+      "uniques_minmax": [ 2, 2 ],
+      "uniques_decinc": [ 0, 2 ]
     }
   ]
 }
