@@ -1,6 +1,6 @@
 {
-  "count": 3,
-  "uniques": 2,
+  "count": 6,
+  "uniques": 5,
   "clones": [
     {
       "timestamp": "2024-12-30T00:00:00Z",
@@ -14,8 +14,13 @@
     },
     {
       "timestamp": "2025-01-07T00:00:00Z",
-      "count": 1,
-      "uniques": 1
+      "count": 2,
+      "uniques": 2
+    },
+    {
+      "timestamp": "2025-01-08T00:00:00Z",
+      "count": 2,
+      "uniques": 2
     }
   ]
 }
