@@ -1,3 +1,12 @@
+2025-01-09T02:12:08Z:
+* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/12682356723 # 535
+* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2025-01-09
+* notice: last 14d: unq all: 5 6
+* notice: prev accum: outdated-unq outdated-all / unq all: 985 1740 / 988 1743
+* notice: next accum: outdated-unq outdated-all / unq all: 985 1740 / 991 1746
+* notice: prev exec diff / last date diff / accum: unq all: +3 +3 -0 -0 / +2 +2 -0 -0 / 2 2
+* notice: removed / changed dates: [] / [2025-01-07 2025-01-08]
+
 2025-01-08T01:45:19Z:
 * notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/12662515564 # 534
 * notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2025-01-08
